tests/ui/parser/fn-defined-using-fun.stderr
error: expected one of `!` or `::`, found `foo`
  --> $DIR/fn-defined-using-fun.rs:6:5
   |
LL | fun foo() {}
   | --- ^^^ expected one of `!` or `::`
   | |
   | help: write `fn` instead of `fun` to declare a function

error: aborting due to 1 previous error

